--- a/voda.tex
+++ b/voda.tex
@@ -137,7 +137,7 @@ Nasedáme pod kaňonem do kterýho nevidíme a vstupenka neni vůbec zadarmo. No
 
 Kontinuální cca 3km dlouhej úsek WW3, nějakej normální stav...
 
-\info[Otz]{25.5.}{190cm Tumpen} %otz + inn
+\info[Otz]{25.5.}{190cm~Tumpen} %otz + inn
 \usek{spodní}
 
 Cestou domu dáváme spodní Ötz do Innu až na vysedačku Innu. Highlight sou 2 rafťáci na nafukovací palmě uprostřed Innu.
@@ -169,7 +169,7 @@ Klasika v Bosně, WW3, nádhernej kaňon, několik trochu těžších peřejí, 
 Spali sme asi 20km od konce v kempu na pravý straně v Bosně, dobře tam vaří :)
 
 \cara
-Cestou zpátky sme dali spodní Isel za stavu kolem 300cm a Möll asi za 130cm.
+Cestou zpátky sme dali spodní Isel za stavu kolem 300cm~a Möll asi za 130cm.
 
 
 \rok{2014}
@@ -179,12 +179,12 @@ Cestou zpátky sme dali spodní Isel za stavu kolem 300cm a Möll asi za 130cm.
 
 Jarní Rakousko se Štěpánem, Kubou a Ondrou. Ještě skoro nic neteklo, takže sme dali Kopáč a Lammer, kterej byl oficiálně zavřenej.
 
-\info[Koppentraun]{12. a 13.4.}{105cm Obertraun}
+\info[Koppentraun]{12. a 13.4.}{105cm~Obertraun}
 \usek[nádraží Bad Ausse]{most přes řeku na L547}
 
 Klasika, 8km, až WW4. nižší stav, ale všechno v pohodě jetelný, katarakty v podstatě zadarmo.
 
-\info[Lammer]{12. a 13.4.}{60cm Obergau}
+\info[Lammer]{12. a 13.4.}{60cm~Obergau}
 \usek{Lammeröffen}
 
 Provez nás Max Eberl, kterýho sme potkali na Koppentraunu. Nižší stav, dost na pohodu. Ráno sme potkali  pražáky (Kuba Suchý,...) a dali sme 2 jízdy, pak ještě jeden Kopáč.
@@ -194,27 +194,27 @@ Provez nás Max Eberl, kterýho sme potkali na Koppentraunu. Nižší stav, dost
 
 Vydařenej zájezd s Kubou (rozbitá loď) a Honzou (vyvrknutej kotník a sádra v Lienzu v nemocnici). Všude hrozně moc vody, takže sme nedali ani Virgen, ani Tauernbach, ani Tunel nebo Wasserfallstrecke. Byli sme taky prohlídnout Untertalbach, měli sme dobrej stav, ale klukům se do toho nechtělo... já bych dal. Takže v podstatě sme nic nejeli, ale rozbili loď a navštívili nemocnici...
 
-\info[Lammer]{7.6.}{70cm Obergau}
+\info[Lammer]{7.6.}{70cm~Obergau}
 \usek{Lammeröffen}
 
 Zastávka cestou na Isel, spali sme pod mostem a ráno dali pár jízd, hezká voda, všechno na pohodu.
 
-\info[Lieser]{7.6.}{170cm Spittal}
+\info[Lieser]{7.6.}{170cm~Spittal}
 \usek[pod dálničním mostem pod Gmündem]{vodočet nad Spittalem}
 
 Neznali sme to, takže sme se trochu báli popisu v DKV, kde psali extrémní spád, ale nakonec to bylo úplně na pohodu kontinuální WW3, poslední cca kilometr byl WW3+. Pohodová projíždka, necelý 2 hodiny.
 
-\info[Isel]{8.6.}{100cm Hinterbichl}
+\info[Isel]{8.6.}{100cm~Hinterbichl}
 \usek[parkoviště Hinterbichl]{most Wallhorn}
 
 6km pěkný kontinuální WW3+ vody, sneslo by to určitě i víc vody. Pěkná je peřejka nad mostem, kde se končí. Asi by se dalo jet na další most o cca 1km níž, potřeba někdy zkusit.
 
-\info[Defereggenbach]{8.6.}{83cm Hopfgarten}
+\info[Defereggenbach]{8.6.}{83cm~Hopfgarten}
 \usek[most nad St. Jakobem 46.911488, 12.300187]{most 1km pod St. Jakobem}
 
 Hodně solidní stav, cca 34 kubíků, jeli sme jenom já a Kuba. Hodně kontinuální 4km sme dali asi za 16 minut, asi tak WW4+. Na první jízdu sme se trochu báli a šolíchali to u břehu, ale všechno se dalo na pohodu, akorát tam člověk nechtěl zaplavat. Ve vesnici něco staví a sou tam lana přes řeku. 
 
-\info[Defereggenbach]{9.6.}{$\sim$80cm Hopfgarten}
+\info[Defereggenbach]{9.6.}{$\sim$80cm~Hopfgarten}
 \usek{Horní}
 
 Nasedli sme pod vodopádem a chtěli sme vysedat na silničním mostu. Celý sme to prošli a nikde žádný stromy, celý to teklo docela z kopce, asi 3 - 4 km WW4+. Po cca 300m Kuba zaplaval a nechytli sme loď, tu sme dostihli až přesně na vysedačce s dírou na špičce i na zádi. Tim sme skončili tenhle vydařenej zájezd, nicméně úsek za sjetí určitě stojí, tenhle stav byla taková ideální střední voda. Dá se jet i úsek na vodopádem, ale obtížně by se to prohlíželo.
@@ -225,39 +225,39 @@ Nasedli sme pod vodopádem a chtěli sme vysedat na silničním mostu. Celý sme
 
 Isel s rodinou, kde se měl připojit Kuba a měli sme dát něco solidnějšího, bohužel mu to nevyšlo. Naštěstí sem tam potkal partičku z Čech, který sem vzal aspoň na Standard na Defáči, horní Isel a na úsek pod kataraktem.
 
-\info[Lammer]{28.6.}{50cm Obergau}
+\info[Lammer]{28.6.}{50cm~Obergau}
 \usek{Lammeröffen}
 
 Zastávka cestou na Isel, opravdu malá voda, spodní hranice pro jetí. Taťka si zaplaval na peřeji pod kataraktem a přenes poslední místo, který je za tohodle stavu fakt úzký, takže jenom jedna jízda...
 
-\info[Lieser]{28.6.}{158cm Spittal}
+\info[Lieser]{28.6.}{158cm~Spittal}
 \usek[pod dálničním mostem pod Gmündem]{vodočet nad Spittalem}
 
 Docela malá voda, vyhejbání šutrům, pohodový WW3. Sjel to i Jirka bez problémů.
 
-\info[Moll]{29.6.}{128cm Winklern}
+\info[Moll]{29.6.}{128cm~Winklern}
 \usek{Klasika od jezu do Winklernu}
 
 Klasika s nafukovačkama, WW2 - 3, 2h.
 
-\info[Gail]{30.6.}{93cm Mauthen}
+\info[Gail]{30.6.}{93cm~Mauthen}
 \usek[Birnbaum]{Mauthen}
 
 Asi největší voda na Gailu co sme měli, pohodový svezení WW2+.
 
 
-\info[Defereggenbach]{30.6.}{76cm Hopfgarten}
+\info[Defereggenbach]{30.6.}{76cm~Hopfgarten}
 \usek{Standardstrecke}
 
 Standardstrecke za docela hezký vody, až WW4, ale všechno na pohodu. Honza na konci na dojezdu přišel o pádlo a krysil, pádlo už sme nenašli, odplavalo po proudu. Jinak v pohodě. Večer sme dali eště Isel z Hubenu.
 
-\info[Isel]{1.7.}{95cm Hinterbichl}
+\info[Isel]{1.7.}{95cm~Hinterbichl}
 \usek{horní a spodek od kataraktu}
 
 Na pohodu svezení, ale docela málo vody, blízko spodního limitu.\\
-Odpoledne sme to nahodili asi 500m pod kataraktem, hezký svezení WW3+, velký vlny, ale žádný větší válce. Za tohodle stavu (asi 270cm Lienz) by to šlo nahodit i těsně pod katarakt, ale na to sme byli ve slabší sestavě.
+Odpoledne sme to nahodili asi 500m pod kataraktem, hezký svezení WW3+, velký vlny, ale žádný větší válce. Za tohodle stavu (asi 270cm~Lienz) by to šlo nahodit i těsně pod katarakt, ale na to sme byli ve slabší sestavě.
 
-\info[Gail]{2.7.}{66cm Maria Luggau}
+\info[Gail]{2.7.}{66cm~Maria Luggau}
 \usek[Maria Luggau]{Birnbaum}
 
 Poprví sem jel horní Gail, docela dobrej stav, ale mohlo by bejt i víc. Pár set metrů po startu je jedno obtížnější místo s velkym rozdělovákem a válcem před nim, ale jinak je to WW3. Části sou v kaňonu, je třeba dávat pozor na spadlý stromy. Jeden zával přenášíme, jinak je to ale dobrý. Ke konci úseku se objeví 2 těžší peřeje, ale na oči. S občasnym prohlíženim jedeme cca 3.5 hodiny, ale dalo by se to za 2.
@@ -277,24 +277,24 @@ Rakousko s Kubou, Patem a Šuhym, směr Inn, Ötz, Isel.
 Giarsun je na pohodu, za tohodle stavu WW3-4, asi dvě místa sme prohlídli, jinak na oči. Kuba to jel prej i za 80 kubíků, což bude jiná řeka :) Dojede se k mostu, tam začíná Ardez, kterej je o trochu těžší. Stav co sme měli vypadal docela optimálně, takovej střed. V půlce se přenáší na levym břehu cca 100m nejetelná zasifonovaná peřej. Pod tim je těžší místo, který se jede těsně zleva mezi šutrama, potom pořád vlevo.Na konci sou dva stupně, první nižší se jede vlevo, druhej (cca 1.5m) se jede středem. Pak už se to zklidňuje a je to na oči. Když se u vody vlevo objeví silnice, blíží se konec. S občasnym prohlíženim cca 2 hodiny.
 
 
-\info[Inn]{22.8.}{260cm Kajetan Brücke}
+\info[Inn]{22.8.}{260cm~Kajetan Brücke}
 \usek{Tösener schlucht, nasedačka Tösens 47.007214, 10.598180, vysedačka Ried vlevo před mostem}
 
 Pěknej střední stav, 3 těžší peřeje, trochu těžší a svižnější než Imster schlucht, ale všechno na oči. Celkově je to všechno o trochu větší, má to sílu, ale na pohodu. 30 min.
 
-\info[Pitzbach]{23.8}{45cm Wenns}
+\info[Pitzbach]{23.8}{45cm~Wenns}
 \usek[most Wiese 47.115556, 10.795853]{47.129180, 10.768366}
 
-U vysedačky je plácek u řeky, kde sme spali. Nasedali sme před nejtěžším úsek u mostu ve Wiese, ale dá se jezdit i o 2km vejš. Stav 45 cm už je spíš nižší, hodně se berou šutry a nedá se jim moc vyhnout, nicméně na rozumný sjetí to stačí. 3-5 cm navíc by byly asi optimální. Vhodný předem prohlídnout kvůli stromům, protože v některejch místech by se zastavovalo hodně těžko.
+U vysedačky je plácek u řeky, kde sme spali. Nasedali sme před nejtěžším úsek u mostu ve Wiese, ale dá se jezdit i o 2km vejš. Stav 45 cm~už je spíš nižší, hodně se berou šutry a nedá se jim moc vyhnout, nicméně na rozumný sjetí to stačí. 3-5 cm~navíc by byly asi optimální. Vhodný předem prohlídnout kvůli stromům, protože v některejch místech by se zastavovalo hodně těžko.
 
 Nejtěžší místo je hned za nasedačkou, 300m peřej v pravý zatáče, najíždí se vlevo, potom je nutný dostat se napravo na 1m drop, odkud se pokračuje víceméně středem s vodou přes několik válců. Dalších 300m je klidnějších, potom je těžší místo v levý zatáčce, nejdřív dva menší stupně, potom cca 2m stupeň, za kterym je šupna u levýho břehu, docela to frčí.Potom následuje rozlitější jednodušší úsek, až před druhou vesnici, kde je místo se dvěma skokama (viditelný ze silnice), nejlepší jet vlevo. Hned za tim se buduje navigace, takže pozor na bordel ze stavby. Ve vesnici je 2m kolmej jez, vhodný prohlídnout předem ze silnice. Potom opět rozlitější úsek, až před vysedačkou to nabírá opět spád, končí to cca 100m dlouhou těžší peřejí s několika válcema, kterou je vhodný prohlídnout. Potom už je vysedačka, případn je možný jet o 100m dál, nicméně je nutný vylezt před mostem, za nim následuje soutěska.
   
-\info[Otz]{23.8}{208cm Tumpen}
+\info[Otz]{23.8}{208cm~Tumpen}
 \usek{Horní}
 
 Pěkná pohodová voda, je to všechno zalitný, neni se nutný vyhejbat šutrům, ale neobjevujou se ani žádný velký válce. Všechno na pohodu na oči. 25min.
 
-\info[Venter Ache]{24.8}{206cm Tumpen}
+\info[Venter Ache]{24.8}{206cm~Tumpen}
 \usek{Spodní}
 
 Nasedačka je most, u odbočky z hlavní je směrovka na parkoviště P4. Supr střední stav, všechno na pohodu, nic se nemusí drhnout přes šutry, ale nebyl to ani velkej letní stav s brutálníma válcema... První těžší místo je rozdělovák, jede se vpravo, kde to žene na skálu a dělá to takovej polštář, ideální lajna je co nejblíž šutru vlevo. Nejtěžší místo je 100m peřej mezi druhym a třetim mostem (odbočka u autobusový zastávky Bodenegg), nicméně jede se celý s vodou, v nájezdu dva válce. Pod mostem je blbý místo vlevo u skály. Těžší místo je pravá zatáčka, kde se najíždí proti skále  a dělá se tam boční válec. Nájezd kdekoliv vpravo od středu. Ještě je tam několik těžších míst, ale všude se dá v klidu zastavit a prohlídnout. První jízda s prohlíženim 1h, druhá jízda 30min.
@@ -302,17 +302,17 @@ Nasedačka je most, u odbočky z hlavní je směrovka na parkoviště P4. Supr s
 \cara
 Následuje přejezd na Isel, jedeme ze Söldenu proti proudu, což je cesta na pass 2500m (platí se 14eur), kde se přejíždí do Itálie. Nicméně v Itálii se sjede do 720m a pak se jede přes další pass 2400m, ze kterýho se sjede na cestu z Brenneru. Kus cesty po brennerstrasse, potom doleva přímo na Defereggenbach z druhý strany, což je opět přes pass cca 2300m. Ten je navíc jednosměrnej, v tomhle směru pouštěj auta mezi 30. a 45. minutou každou hodinu (semafor je u jezera). Tahle cesta opravdu neni optimální, lépe se vrátit a jet přes Brenner, nebo to objet celý přes Rakousko.
 
-\info[Defereggenbach]{25.8.}{62cm Hopfgarten}
+\info[Defereggenbach]{25.8.}{62cm~Hopfgarten}
 \usek{Standardstrecke}
 
 I za tohodle stavu pořád eště v pohodě jetelný a vůbec né nudný. Bohužel na tunel nebo wasserfallstrecke je to pořád moc.
 
-\info[Tauernbach]{25.8.}{160cm Prossegg}
+\info[Tauernbach]{25.8.}{160cm~Prossegg}
 \usek{Standardstrecke}
 
-Střední voda, ale sneslo by to na pohodu i o 5 - 10cm víc. Nasedačka cca 200m nad dřevěnym mostem u vysokýho bočního vodopádu. První kilák v pohodě, potom cca 800m těžší úsek WW4-5. První místo je taková úzká škvíra s bočnim válcem, určitě prohlídnout. Jedu jako jedinej, nájezd z pravýho středu do leva, ve výsledku  průjezd úplně v pohodě. Hned potom následuje hodně kamenitá peřej v levý zatáčce, jede se středem s vodou. Potom několik peřejí a stupňů, dá se jet na oči. Poslední prudší stupeň vhodný jet spíš vpravo. Poslední těžší místo je 1m stupeň pod mostem, vhodný prohlídnout z levýho břehu nebo předem z cesty. Vysedačka kdekoliv za mostem, po cca 400m vožný lesem vylezt na parkoviště u odbočky z hlavní silnice. Nutný zastavit tady, následuje těžkej kaňon zapadanej stromama.
+Střední voda, ale sneslo by to na pohodu i o 5 - 10cm~víc. Nasedačka cca 200m nad dřevěnym mostem u vysokýho bočního vodopádu. První kilák v pohodě, potom cca 800m těžší úsek WW4-5. První místo je taková úzká škvíra s bočnim válcem, určitě prohlídnout. Jedu jako jedinej, nájezd z pravýho středu do leva, ve výsledku  průjezd úplně v pohodě. Hned potom následuje hodně kamenitá peřej v levý zatáčce, jede se středem s vodou. Potom několik peřejí a stupňů, dá se jet na oči. Poslední prudší stupeň vhodný jet spíš vpravo. Poslední těžší místo je 1m stupeň pod mostem, vhodný prohlídnout z levýho břehu nebo předem z cesty. Vysedačka kdekoliv za mostem, po cca 400m vožný lesem vylezt na parkoviště u odbočky z hlavní silnice. Nutný zastavit tady, následuje těžkej kaňon zapadanej stromama.
 
-\info[Isel]{25.8.}{280cm Lienz}
+\info[Isel]{25.8.}{280cm~Lienz}
 \usek{od kataraktu do Hubenu}
 
 Spíme u řeky pod kataraktem na levym břehu, asfaltová odbočka u vesnice Feld (46.956511, 12.560980). Nasedáme těsně pod kataraktem. První peřeje trochu těžší, WW4, potom se to trochu zklidňuje. Za tohodle stavu na pohodu poježdění, na vyblbnutí, žádný nebezpečný místo. Hořejšek je čerstvě převoranej, zmizely velký kusy břehů a řeka místy teče úplně jinudy než dřív. Až na plážičku pod Hubenem dáváme za 23min. Jedeme 3 jízdy během dvou dní...
@@ -327,17 +327,17 @@ Letos to byly opravdu vydařený Čerťáky :) Teklo 20 kubíků, dali sme 3 jí
 
 Víkendová voda se Štěpánem, Pavlem a Vojtou. V pátek ve 3 ráno dorážíme na parkoviště do Haimingu, kde spíme. Ráno vyrážíme rovnou na lesní. Druhej den spíme na mezimostí, kde potkáváme partu plzeňáků, poměrně slušná párty :)
 
-\info[Otz]{11.10.}{180cm Tumpen}
+\info[Otz]{11.10.}{180cm~Tumpen}
 \usek{Lesní}
 
 Dali sme za den 3$\times$, dost nízkej stav, ale eště rozumně jetelný.
 
-\info[Venter]{11.10.}{180cm Tumpen}
+\info[Venter]{11.10.}{180cm~Tumpen}
 \usek{Dolní}
 
 2 rychlý jízdy (na poslední sme nasedali v půl šestý), samozřejmě taky na spodní hranici, ale dalo se.
 
-\info[Otz]{11.10.}{178cm Tumpen}
+\info[Otz]{11.10.}{178cm~Tumpen}
 \usek{Mezimostí}
 
 Přidal sem se na jednu jízdu k týpkům z Plzně. Stav docela nízkej, za moc nižší vody bych to jet nechtěl, nicméně rozhodně to bylo s vodou lepší než lesní nebo Venter a dalo by se to i za nižší (možná až do 170?).
@@ -366,7 +366,7 @@ Brzká obleva, bylo kolem $15^{\circ}C$, takže paráda. Teklo cca $100m^3/s$. B
 
 Jedna jízda se Štěpánem, no big water to nebyl :)
 
-\info[Mumlava + Jizera]{11.3.}{$<3m^3/s, 16m^3/s$}
+\info[Mumlava + Jizera]{11.3.}{$<3m^3/s,~16m^3/s$}
 \usek{Klasika}
 
 Taky hodně spodní limit, ale sešoupat to šlo, pod jezem bez vody
@@ -407,16 +407,16 @@ Odpoledne sme 2x šoupli Navarov, druhá jízda už jenom na zbytcích vody, ale
 \datum[1.5. - 10.5.]
 Kuba, Pat, Šuhy, Boleslaváci
 
-Vyrážíme ve čtvrtek večer z Prahy, ale nějak to nestíháme, tak se rozhodneme přespat v Budějcích. Vzhledem k tomu, že sme nákup v Tescu dokončili nějak po půlnoci a komplet nabalný sme byli asi v půl druhý, tak stejně nemělo moc smysl už vyrážet. Ráno v 7 vyrážíme směrem Ötz. Celou cestu leje, ale na Ötzu se trochu vyčasí. Dorážíme tak odpoledne, ale docela v rozumnej čas. Koukáme na Mezimostí, ale za 175cm je to úplně suchý, tak jedeme dolu.
+Vyrážíme ve čtvrtek večer z Prahy, ale nějak to nestíháme, tak se rozhodneme přespat v Budějcích. Vzhledem k tomu, že sme nákup v Tescu dokončili nějak po půlnoci a komplet nabalný sme byli asi v půl druhý, tak stejně nemělo moc smysl už vyrážet. Ráno v 7 vyrážíme směrem Ötz. Celou cestu leje, ale na Ötzu se trochu vyčasí. Dorážíme tak odpoledne, ale docela v rozumnej čas. Koukáme na Mezimostí, ale za 175cm~je to úplně suchý, tak jedeme dolu.
 
-\info[Otz]{1.5.}{$175cm Tumpen$}
+\info[Otz]{1.5.}{$175cm~Tumpen$}
 \usek{Wellerbrücke}
 
 Dáváme 3 jízdy, lajny sou docela jasný, největší problém dělá válec na středu TNT, kde si v první jízdě trochu  pokempim, ale dá se z toho vytáhnout. Za tohodle stavu to nemá moc sílu, takže sice je to pořád stejně z kopce, ale na všechno je dost času. Druhá jízda podobná, ale celkově to dáváme docela v pohodě. Při třetí jízdě eskymuju pod champions killerem, ale naštěstí až za nim. Kuba dává poslední lajnu přes killer úplně parádní. Ale už to nechcem pokoušet a jedem dolu, ještě nás čeká přejezd do Tessinu.
 
 Večer přejíždíme na spaní k Verzasce, spíme na parkovišti ve vesnici cca. 500m nad nasedačkou středního úseku. Platí se 20 franků / eur za noc+den, z toho 10 franků se platit musí stejně, protože všechny parkoviště v údolí jsou přes den zpoplatněný. Noční lístek se nám ale už nepodařilo zaplatit, asi už bylo pozdě či co. Takže kupujeme až ráno lístek jenom na parkování.
 
-\info[Verzasca]{2.5.}{$24 m^3/s$ Lavaretezzo}
+\info[Verzasca]{2.5.}{$24 m^3/s$~Lavaretezzo}
 \usek{střední}
 
 Ráno je parádní počasí, sluníčko, teplo, začínáme na střední Verzasce pod mostem. První větší peřej kousek po nasedačce prohlížíme, je to dost kamenitý (na 40 kubíků je tam lajna mnohem lepší). Nakonec jedeme průskokem ze středu doleva a pak úplně kolem levýho břehu, případně se dá levej střed přes šikmej válec. Druhou těžší peřej taky prohlížíme, jede se celá levej střed a ke konci spíš doleva. V nájezdu eskymuju, ale naštěstí zvedám hned na pohodu (celkově na začátku zájezdu eskymuju zbytečně skoro na každý řece, ta nerozježděnost je přece jenom znát). Pak už je to většinou na oči, maximálně s rychlim prohlížením, kdy jeden vyběhne z lodi. Přece jenom lajny jsou úplně jiný, než jak si je pamatuju za 40 kubíků. Těžší místa jsou až ke konci, kde jsou dva skoky za sebou a pak ďáblova strouha. První skok jedeme zprava, druhej se jee spíš u levý strany. Strouhu najíždíme úplně zprava, roládou se nechávám hodit úplně k pravýmu břehu a pak celý vpravo, na konci peřeje je docela válec, člověk tam chce bejt co nejvíc vpravo to de.
@@ -433,18 +433,18 @@ Ráno nasedáme na Rovanu, tušíme, že to má docela nakoupeno (bežnej stav $
  Kluci, co ráno nasedli na Rovanu mnohem vejš, tam zůstali někde v nějakym kaňonu a museli vylejzat na házečkách ven, tam nakonec stráví několik hodin a dostávaj se ven asi ve 3, naštěstí prej všichni v pohodě. My přejíždíme odpoedne na Ribo. 
 
 
-\info[Ribo]{3.5.}{vyšší střední}
+\info[Ribo]{3.5.}{vyšší~střední}
 \usek{Od Vodopádu}
 
 Nasedáme pod vodopádem, nějak na něj za tohodle stavu nemáme morál - den před tim tam byly nějaký zlomený žebra, pádla, někdo si tam udělal něco s obratlem, což nás od toho docela odradilo. Jinak je to moc hezký, má to dobrou vodu, přenášíme jenom jedno místo - první větší peřej (300m pod vodopádem), kde je prej vlevo pod skálou na kterou to žene undercut. Za tohdle stavu je to celý pod vodou, ale asi to nemá cenu. Jinak docela prohlížíme, ale všechno jedem celkem na pohodu. Jedeme cca 2 hodiny.
 
 Večer přejíždíme na spací místo pár km na Vergelletem, kde je vyjetá cesta na louku přímo u řeky, spaní parádní.
 
-\info[Ribo]{4.5.}{vyšší střední}
+\info[Ribo]{4.5.}{vyšší~střední}
 \usek{Od vodopádu}
 Ráno dáváme další jízdu. Koukáme i na horní úsek, kterj vypadá dobře, ale nakonec se nám nechce jet kaňon na začátku vesnice. Ale podle videí je to asi docela v pohodě, určitě to příště musíme zkusit. Jinak druhou jízdu jedeme asi 40min, už se nezdržujeme prohlížením, všechno najíždíme na pohodu. Jedeme jenom 3 bez Pata, tomu se nechce a převáží auto.
 
-\info[San Giovanni]{4.5.}{nižší stav, $1.5 - 2m^3/s$}
+\info[San Giovanni]{4.5.}{nižší~stav, $1.5~-~2m^3/s$}
 \usek{Park'n'huck ($N46.007642, E8.584774$)}
 Rozhodujeme se přejet do Piemontu na Sesii, tak se cestou stavíme na San Giovanni. Vody moc neni, ale na vodopády je to v pohodě. Dáváme si tady na pohodu 3 kolečka, až na jednu Patovu lajnu, kdy zvedá pod prvnim dropem a druhej jede pozadu. Ale všechno v pohodě. Poslední jízdu dávám na třetím dropu freewheel, kupodivu se docela daří, tak to vyhecuje Kubu a taky tam jednoho parádního pošle.
 
@@ -481,7 +481,7 @@ Krajinovka, na začátku pár těžších peřejí, ke konci lehčí. WW 3-4. Up
 Co jsme zjistili až doma z videí, že se to dá jet ještě dál, což by měl bejt zdaleka nejlepší úsek (cca o stupeň těžší), nějaký must-runy a několik 1-3m vyskojech dropů. Příště to určitě musíme zkusit. Výstup by měl bejt u starýho římskýho mostu, kterej podle videí nejde minout.
 
 
-\info[San Bernardino]{7.5.}{střední, odhadem 12-15 kubíků, cca 10-12cm dole na koruně jezu}
+\info[San Bernardino]{7.5.}{střední, odhadem 12-15 kubíků, cca 10-12cm~dole na koruně jezu}
 \usek{Horní}
 
 Na San Bernardino je supr cesta pro jedno auto, neprojedou tam auta vyšší než 270cm. Na vodu se nasedá z cesty na pravym břehu pod mostem. Dorážíme trochu pozdě, nasedáme na vodu až v půl šestý, nasedáme až pod první peřejí, kde je solidní sifon. Úsek má cca 4km, jedeme s prohlížením 2.5 hodiny.
@@ -493,7 +493,7 @@ Ke konci řeka zvolní, peřeje jdou už jet na oči nebo zkouknout z lodi. Vyč
 Večer přejíždíme na nasedačku Melezzy, kde spíme na parkovišti u mostu ($N46.137942^\circ, E8.573761^\circ$).
 
 
-\info[Melezza]{8.5.}{nízký stav, odhadem $8 - 10m^3/s$}
+\info[Melezza]{8.5.}{nízký stav, odhadem $8~-~10m^3/s$}
 \usek[Pod mostem Melezzo 3]{Jez s lávkou}
 
 Nasedáme nezvykle brzo dopoledne, máme před sebou úsek asi 3km a nikdo to neznáme. Nasedáme až pod mostem, protože v peřeji nad mostem je novej sifon a před pár tejdny se tam někdo utopil. Prvních pár set metrů rozbitý peřeje, máme spodní stav, aby to šlo vůbec projet. Potom se to trochu rozjíždí, sou tam dvě větší peřeje, jsou hodně kamenitý, ale dá se to projet, WW4. 
@@ -517,7 +517,7 @@ Na večer dáváme na vypádlování rychlou jízdu, sesmahnem to asi za 30min. 
 Nasedáme ve vesnici nad jezem a jedeme před jez na soutoku. Nad jezem je jenom jedna větší peřej kousek za soutokem Glenneru s Valserrheinem. Jez jedeme na pohodu levej střed. Za tohdle stavu je řeka docela kontinuální a zábavná, od soutěsky pod mostem je hodně pěknej cca 1km kontinuální úsek až na konec galerie.
 Jedeme 2 jízdy, obě pod hodinu.
 
-Večer přejíždíme na Lammer, spaní na nasedačce je ale plný (WW ženy), tak nakonec spíme pod mostem na vysedačce. Přes noc je ale brutální bouřka a Lammer stoupne z 80cm na 105cm. Ráno to procházíme, lajny tam sice sou, ale vody je fakt hodně a nakonec to nejedeme a zkoušíme Taugl.
+Večer přejíždíme na Lammer, spaní na nasedačce je ale plný (WW ženy), tak nakonec spíme pod mostem na vysedačce. Přes noc je ale brutální bouřka a Lammer stoupne z 80cm~na 105cm. Ráno to procházíme, lajny tam sice sou, ale vody je fakt hodně a nakonec to nejedeme a zkoušíme Taugl.
 
 
 \info[Taugl]{10.5.}{vyšší}
@@ -928,7 +928,7 @@ Z nějakýho důvodu několik dní teče 6 kubíků na čerťácich. Přidávám
 \akce{Stubai}
 \datum[14. - 17.11.]
 
-\info[Inn]{17.11.}{$206cm Magerbach$}
+\info[Inn]{17.11.}{$206cm~Magerbach$}
 \usek{Imster}
 
 Lyžovačku sme spojiili se svátečnim Innem. Je málo vody, ale pohodový podzimní zapádlování.
@@ -1003,7 +1003,7 @@ Mimochodem první řeka na Toru, dojem veskrze pozitivní ;)
 vyrážíme s budějčákama na víkend do Rakous ve složení Šafi, Radim, Tkáňa, Profesor a na místě už na nás čeká Sudeťák a Káťou. Vyrážíme v sobotu ráno.
 
 
-\info[Saalach]{30.4.}{$30+m^3/s, 42cm Unterjettenberg$}
+\info[Saalach]{30.4.}{$30+m^3/s,~42cm~Unterjettenberg$}
 \usek{Lofer}
 
 Na Loferu je střední voda, ale osobně sem to za větší nejel. V podstatě je to celý v pohodě, akorát trojkombo trochu tahá za ruce. První válec je dost podctivej, ale člověk do něj má rychlost a ve výsledku sem s nim problémy neměl. Potom klasicky pravá lajna, chce si to pohlídat náklon na pravej válec. Lžíce klasika, potom esíčko. To se imho zase trochu otevřelo vlevo, ale lajna pořád stejná. Při první jízdě jedu moc vpravo, chytne mě válec a musim se z něj tahat, zároveň i eskymuju. Naštěstí žádný drama, po  straně odtejká, takže se z něj docela snadno vytáhnu - ale trochu stres, člověk tady nechce dělat blbosti. Jinak zbytek víceméně klasika, dropíky, boofy, bomby, pohoda... Druhá jízda v pohodě, ale na třetí už sme líný. Mimochodem Toro je bomba, jenom sem si eště úplně nezvyk na ty ostrý hrany.
@@ -1013,7 +1013,7 @@ Na Loferu je střední voda, ale osobně sem to za větší nejel. V podstatě j
 Večer přejíždíme na Lammer, spíme v pohodovym penzionku v Gollingu - 35E za noc + snídani. Snídáme mimochodem asi 2 hodiny, protože to je prostě bomba :P
 
 
-\info[Lammer]{1.5.}{$58cm Obergau$}
+\info[Lammer]{1.5.}{$58cm~Obergau$}
 \usek{klasika}
 
 Frčíme na Lammer, málo vody, ale pohoda. V řece plno napadanejch větví a stromů, ale s opatrností všechno průjezdný. O zábavu se stará Tkáňa - 2 eskymáky v první jízdě, po odjetí zjistí, že má otevřenou kapsu na vestě a nemá v ní klíče. Na štěstí mu vypadli už na nasedačce a klui z vboyz nám je hodili na vysedačku za stěrač = bomba! Další část zábavy obstarává Šafi při kryse na kataraktu a následně Radim s jeho veřejnou stolicí... Jinak žádný drama, dáváme Č jízdy a frčíme domu. Za zmínku asi stojí, že zmizel popelník :(( Už neni :(( Resp je to furt stejně úzký, ale nic se tam neděje, žádnej válec, nic... Prostě jen tekoucí volej...
@@ -1039,7 +1039,7 @@ Ještě stíháme střední Verzascu, nemá to nijak moc vody, ale dá se to jet
 
 Spíme na klasikym prakovišti nad nasedačkou na střední úsek.
 
-\info[Verzasca]{15.5.}{$cca 18 m^3/s$}
+\info[Verzasca]{15.5.}{$cca~18 m^3/s$}
 \usek{spodní}
 
 Druhej den dáváme spodní Verzascu (Dan, Slávoš, Jirka). Nasedáme na horním parkovišti, ale neseme jak žebra nad vodopádem, tak vodopád. Peřej pod vodopádem je dost v pohodě, člověk do toho jenom najede a čeká, co se stane, nedá se tam toho moc zkazit. Pak jsou tam 2 peřeje, než se vjede do vesnice. Druhá se najíždí ze středu do prava po velký plotně, dole to de na takovej blbej šutr. Nejlepší lajna je hodně do leva, vyjet na ten plochej šutr. Drop ve vesnici přenášíme, neseme i další peřej, kterou jede jenom Slávoš, dává ale dost s přehledem. Pár dalších peřejí jedeme, včetně dropu, na kterej se najíždí zleva přes plotnu a končí se boofem. Pak je jedna peřej s válcema, jedeme zleva na pravej střed a za válcem zpátky doprava. Potom neseme portage, další peřej je drop, kterej se dá jet téměř kdekoliv a pak další boof, kde je potřeba bejt hodně vlevo. Nad dropem se nějak mrdám a nestíhám vracák pravo, tak jedu rovnou. Na poslednim dropu nejsem dostatečně vlevo, spadnu pod šutr vpravo a namáčkne mě to na další šutr pod nim. Doprava nemůžu, tam jsem namáčklej, doleva proti proudu se taky nemůžu dostat abych vyzvedal, nakonec docela rychle krysim. Jsem pořád u válce, naštěstí vylezu na šutr, kde sem byl namáčklej a zkočim z něj do proudu. Odlovuje mě Slávoš. Mezi tim, co se sbírám, tak jede Dan a zaplave úplně stejně. Potom už je jenom double drop s boofama, u obou jsou docela poctivý válce, nemáme morál a všichni neseme. Další peřej jede jenom Slávoš, neseme taky. Konec, vesedáme vlevo na začátku vzdutí jezu.
@@ -1050,13 +1050,13 @@ Kluci jedou odpoledne eště střední, mě ale pobolívá rameno, tak to šetř
 
 Večer přejíždíme na Ribo a spíme na Vergelettem (ještě o kus vejš, než sme spali loni, ale hodně podobný místo).
 
-\info[Ribo]{16.5.}{$spodní limit$}
+\info[Ribo]{16.5.}{spodní~limit}
 \usek{klasika}
 
 Ráno dáváme Ribo, má malou vodu, ale vypadá to, že pude. Slávoš, Dan a Jirka dávaj vodopád, všichni docela na pohodu. Potom dolu je to docela jebačka, fakt spodní limit. Jedu všechno krom klasický přenášky, jinak sem tam někdo různý místa přenáší. Všechno na pohodu, až na místo cca uprostřed - levej boof asi z metrovýho dropíku. Sem moc vpravo, dopadnu na skálu, zvrhám se a natlačí mě to vlevo na skálu. Musim se od ní trochu odstrakt, abych moh zvednout, ale v pohodě. Jinak dávaj všichni v pohodě, žádný krysy.
 
 
-\info[San Giovani]{16.5.}{$nižší stav, podobně jako loni$}
+\info[San Giovani]{16.5.}{nižší stav, podobně jako loni}
 \usek{park and huck}
 
 Rozhodnem se přejet do Piemáče, jestli tam nebudou lepí stavy, cestou dáváme San Giovani. Nemá to moc, ale v pohodě se to dá. Já si na nasedačce při první jízdě podvrknu kotník, protože sem kokot. Dávám na konec jenom jeden run, na poslednim dropu mi eště při freewheelu padá šprajda, ale cajk. Kluci to točí eště několikrát, pak frčíme směr Val Sesia.
@@ -1078,7 +1078,7 @@ Jedeme spodní Sermenzu z vesnice na soutok. Celý je to dost v pohodě, jediný
 
 Klucí jedou ráno drop na Egue, má to eště míň než minule, tak jenom park and huck.
 
-\info[Sermenza]{20.5.}{$spodní limit$}
+\info[Sermenza]{20.5.}{spodní limit}
 \usek{spodní + Sesia k prvnímu mostu}
 
 Dáváme znova Sermenzu, má to eště míň než minule, už docela spodní limit. Ale v podstatě je to dost podobný jako včera. Jedem až do Sesie až do první vesnice. Little Kanada trochu překvapuje, za takhle malý vody je to těžší, než si to pamatuju :) Jinak pohodička...
@@ -1104,25 +1104,25 @@ Potom chvíli pozevlíme pod mostem na nasedačce střední, dáme oběd a něja
 Se Štěpánem, Zukzkou, Pepem a Ondrou.
 
 
-\info[Taugl]{3.7.}{$nižší střední$}
+\info[Taugl]{3.7.}{nižší střední}
 \usek{vodopád}
 2xh
 
 3x, pohoda, super
 
-\info[Defereggenbach]{4.7.}{$70cm Hopfgarten$}
+\info[Defereggenbach]{4.7.}{$70cm~Hopfgarten$}
 \usek{horní}
 
 Jedeme až na konec cesty (k zákazu vjezdu) - cca 2 km nad přenáškou (vodopád). Hned na začátku nám zaplave Zuzka, naštěstí to docela rychle odlovíme a pokračujeme. Je to hodně kontinuální, žádný vracáky, ale nic zásadního tam neni. Jediná výraznější peřej je nakonci kaňonku, kdy se silnice vrací k řece. Lepší jet u levý strany (levej střed), nicméně na prohlížení neni moc prostor. Před přenáškou končí Zuzka i Štěpán, je to nan ně moc kontinuální (je dobře, že končí). Dál jedem s Pokorňákem a Pepem. Po přenášce je to všechno o půl stupňě těžší, teče to trochu víc z kopce, peřeje jsou výraznější. Žádná vyloženě nevyčnívá, ale prvních cca 500 m je asi nejtěžších. Jinak je to všechno v pohodě, ale poctivý kontinuální WW4. Všude ale stačí jet s vodou, špičku po proudu, všechno boofovat a vyhejbat se štutrům.
 I s přenáškou a lovením Zuzky jedeme asi 1:15. Reálně na vodě je to tak 20 + 15 min. Stav si myslím naprosto optimální, neni to jebačka, ale eště to ani neni nakoupený. Na vysedačce u mýta to vypadá, že tý vody neni moc, ale šlo by to.
 
 
-\info[Defereggenbach]{4.7.}{$68cm Hopfgarten$}
+\info[Defereggenbach]{4.7.}{$68cm~Hopfgarten$}
 \usek{Standardstrecke}
 2x
 
 
-\info[Ahrnbach]{4.7.}{$45m^3/s St....$}
+\info[Ahrnbach]{4.7.}{$45m^3/s~St....$}
 \usek{Schloss}
 
 Má to docela dost vody. Asi tolik, že za celou cestu nechytneme jedinej vracák, ale celkově je to 7 min na vodě, takže se to dá přežít. V podstatě když člověk zná lajny, tak je to v pohodě, možná lepší, než za menších stavů, že se nemusí tolik kličkovat mezi šutrama, je to docela dost zalitý. Jedeme s Ondrou a Pepem, všichni v klidu...
@@ -1149,31 +1149,31 @@ Další peřeje už jsou přehlednější a míň z kopce, ale pořád se v nich
 Spíme u maštale, ráno přejíždíme na Passer (jedeme přes Bolzano a Merano). Passer má nicméně poměrně málo, Štěpa se Zuzkou jedou nějakej spodnější 3-4 úsek, s Pepem prohlížíme finálovou sekci KOTA (má málo) a kaňon (je hrozně poctivej). Nakonec nic nepádlujeme, spíme na horním Passeru a ráno jedeme na Ötz.
 
 
-\info[Venter Ache]{8.7.}{$235cm Tumpen$}
+\info[Venter Ache]{8.7.}{$235cm~Tumpen$}
 \usek{Horní}
 
 Jedeme s Pepem horní venter z Ventu na nasedačku Heiligu. Zpočátku je to poklidná WW3, ale když se objeví silniční galerie, začne ro padat dost z kopce. Jednotlivý peřeje nemá smysl popisovat, je to několik kiláků kontinuálních peřejí. Žádná extra nevyniká, krom první jde všechno prohlídnout z lodi. První jet z leva do prava. Peřej u silničního mostu neseme, ale lajny tam jsou. K mostu jedeme 40min. Úsek pod mostem je asi nejtěží, ale neliší se to až o tolik od hodního úseku. Je potřeba si prohlídnout vysedačku, před Heiligem člověk chce zastavit.Celkově jedem asi 1:15.
 
 
-\info[Otz]{8.7.}{$235cm Tumpen$}
+\info[Otz]{8.7.}{$235cm~Tumpen$}
 \usek{Spodní}
 
 Chtělo by to víc.
 
 
-\info[Venter Ache]{9.7.}{$243cm Tumpen$}
+\info[Venter Ache]{9.7.}{$243cm~Tumpen$}
 \usek{Spodní}
 
 Je to pořád dost v pohodě, sice to sype, ale žádný velký válce tam eště nejsou, jedeme celkem v pohodě. Já zvedám v peřeji nad mostem, ale sem po večírku a sem trochu marnější. Jinak OK.
 
 
-\info[Otz]{9.7.}{$245cm Tumpen$}
+\info[Otz]{9.7.}{$245cm~Tumpen$}
 \usek{Spodní}
 
 Eště víc, ale je to zábava. Štěpán se Zuzkou jedou až do Innu, my s Pepem vysedáme na konci Ötzu a pendlujem. Pak dáváme pejezd na pískovnu na Lofer.
 
 
-\info[Saalach]{10.7.}{$35cm Unterjettenberg$}
+\info[Saalach]{10.7.}{$35cm~Unterjettenberg$}
 \usek{Lofer}
 
 V neděli dáváme $2x$ Lofer za pohodovýho stavu, Štěpán ho jede poprví. Všechno v poklidu v obou jízdách, na vypádlování parádní. Po poledni vyrážíme domu.
@@ -1208,25 +1208,25 @@ S Ježurou, Dominikou a Vojtou Pražanem.
 
 Na rozjetí jedeme Sannu eště s nějakou skupinkou Ježurovo kamarádů. Nasedačka je u mostu na soutoku Rosany a Trisany, vysedáme kousek za velkym dálničnim mostem. Je to záležitost tak na 30 min. Je to pohodovej úsek WW3, kontinuální, ale nikde nic dramatickýho. Sneslo by to klidně i výrazně víc vody.
 
-\info[Otz]{23.7.}{$230cm Tumpen$}
+\info[Otz]{23.7.}{$230cm~Tumpen$}
 \usek{Spodní}
 
 Dáváme spodní Ötz až do Heimingu, klasika.
 
 
-\info[Venter Ache]{23.7.}{$250cm Tumpen$}
+\info[Venter Ache]{23.7.}{$250cm~Tumpen$}
 \usek{Spodní}
 
 Na vodočtu v Tumpenu je cca 235cm, ale má to výrazně víc vody, než když sme to jeli před 2ma tejdnama s Pepem (243cm). Přijde mi to jako stejnej stav jako na Pokorňákově videu za 275cm. Chtělo by to zkouknout asi eště nějaký jiný vodočty, který tomu víc odpovídaj. Na nasedačce, když se kouká proti proudu, kouká z vody jenom jeden kamen a přes něj cáká voda (podle toho by to šlo relativně odhadnout). Na nasedačce to nevypadá tak strašně, tak jedeme s Ježurou i Vojtou. Nicméně je to fakt mocný, valí to dolu a válce sou fakt velký. Musim jednou zvedat v prvnim kaňonku, kdy jedu moc vpravo po pekelnym bubláku u skály a nějak mě to tam zvrhá. Vojta zvedá asi $3\times$ až nakonec vyplave v prusší části nad kataraktíkem mezi 2ma mostama. Ježura ho naštěstí docela rychle dostane na břeh, ale loď i pádlo uplave.My to pak s Ježurou dojíždíme, už relativně v pohodě, ale z některejch válců de pořád docela strach.
 
 
-\info[Otz]{24.7.}{$225/240cm Tumpen$}
+\info[Otz]{24.7.}{$225/240cm~Tumpen$}
 \usek{Spodní}
 
 Dáváme znova spodní Ötz na zablbnutí, jeden jedem kolem poledne za celkem malý vody, další jedeme večer jenom já s Dominikou a to už se celkem dá.
 
 
-\info[Otz]{23.7.}{$235cm Tumpen$}
+\info[Otz]{23.7.}{$235cm~Tumpen$}
 \usek{Lesní}
 
 Lesní je docela nakoupená, je to relativně poctivý, ale vypadá to dobře. Jenže v první peřeji si Ježura něco udělá s rukou a nemůže jet dál, takže sme si sjeli asi jenom 500m :(
@@ -1375,6 +1375,34 @@ Jedeme si s jednim rakušákem. Je poměrně málo vody, ale jetelný to je. Pod
 \usek{Gesause-eingang}
 
 Potom ještě s tím Rakušákem přejíždíme na Gesause a dáváme dva runy. Je to poměrně v pohodě, první peřej najíždíme levou lajnou, v pravo sou stromy. Potom se celou dobu jede takovej levej střed, válec před pyramidou bereme zleva, potom i pyramidu objíždíme zleva, potom zpátky do proudu a traverz do prava. Nicméně za tohodle stavu jsou kolem pyramidy možný asi všechny lajny - jak vpravo, tak i středem. Jde o to si jenom vybrat. Zbytek už se dojíždí v klidu u pravý strany.
+
+
+\rok{2017}
+\akce{Jizerky}
+\datum[23.2.]
+
+Vypadá to na první jarní (zimní) déšť, tak ve čtvrtek beru dovolenou a vyrážíme se Štěpou, Slávošem a Spacim do Jizerek.
+
+\info[Jizerka]{23.2.}{$3.2m^3/s$}
+\usek{Jizerka + Jizera na Mejto}
+
+Jizerka neni původně v plánu, ale na Mejtě potkáváme kluky co už jí maj za sebou a žádnej problém se sněhem / ledem tam neni, tak vyrážíme. Sněhu je teda nahoře ještě docela dost (půl metru), ale Jizerka v pohodě. Cestou až na pár drobnejch pinů Štěpána a Spaciho žádný větší problémy, v řece žádný novinky, pohoda. Jizera má kolem $35m^3/s$, takže taky pěkný svezení. Akorát Cutisin nesem, protože sme před nim zastavili se podívat a pak už se nikomu nechce... měli sme jet rovnou...
+
+\info[Jizera]{23.2.}{$35m^3/s$}
+\usek{Z Mejta}
+
+Na Mejtě se potkáváme s Pájou, Štěpa se Spacim jedou pro auto a my jedem s spodek Jizery. Voda pohodová, akorát si dávám nejhorší lajnu na ostrově v životě. Jedu pravou lajnu, ale zvrhne m nějak podivně nějakej válec ještě nad tim největšim válcem. Je tam celkem mělko a beru o dno, takže zvedám strašně pomalu a zvednu akorát na hraně válce, do kterýho padám bokem. Naštěstí nedrží zas tolik a u levý strany se z něj na pravej záběr vytáhnu. Popravdě sem docela rád, že sem tam nemusel dlouho nic vymejšlet, voda má asi tak $0^{\circ}C$ a vzduch asi 3... Zbytek už v pohodě, jedem jenom do zatáčky, což neni zas tak dobrej nápad, vydrápat se tim sněhem nahoru je asi nejhorší z celý cesty...
+
+\info[Mumlava]{23.2.}{$8m^3/s$}
+\usek{Klasika}
+
+Nakonec dáváme ještě Mumlavku, Slávoš posílá v pohodě i jez, ale na další jízdu už sme všichni líný, tak vyrážíme na pizzu...
+
+\akce{Kamenda}
+\datum[5.3.]
+
+\info[Kamenice]{5.3.}{$8m^3/s$}
+\usek{Klasika}
 
 
 \end{document}.
